; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_find_first_entry.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_find_first_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ITERATOR_FIRST = common dso_local global i32 0, align 4
@IDX_NIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @find_first_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_first_entry(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32, i32* @ITERATOR_FIRST, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @n_entries(i32* %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %14, label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* @IDX_NIL, align 4
  store i32 %13, i32* %2, align 4
  br label %17

14:                                               ; preds = %8
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @hashmap_iterate_entry(i32* %15, i32* %4)
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %14, %12
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @n_entries(i32*) #1

declare dso_local i32 @hashmap_iterate_entry(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
